[gd_scene load_steps=13 format=2]

[ext_resource path="res://components/Board/Board.tscn" type="PackedScene" id=1]
[ext_resource path="res://components/Chip/Chip.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/TestLevel.gd" type="Script" id=3]
[ext_resource path="res://components/GameController/GameController.tscn" type="PackedScene" id=4]
[ext_resource path="res://components/Die/Die.tscn" type="PackedScene" id=5]
[ext_resource path="res://components/GameCamera/GameCamera.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/audio/sound/dice_roll_1.mp3" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/sound/turn_player.mp3" type="AudioStream" id=8]
[ext_resource path="res://assets/audio/sound/token_move_3.mp3" type="AudioStream" id=9]

[sub_resource type="BoxShape" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.513726, 0.513726, 0.513726, 1 )

[sub_resource type="CubeMesh" id=3]
material = SubResource( 2 )

[node name="TestLevel" type="Spatial"]
script = ExtResource( 3 )

[node name="GameController" parent="." instance=ExtResource( 4 )]
player_chips_path = NodePath("../PlayerChips")
enemy_chips_path = NodePath("../EnemyChips")
board_path = NodePath("../Board")
dice_path = NodePath("../Dice")

[node name="Board" parent="." instance=ExtResource( 1 )]

[node name="Table" type="StaticBody" parent="."]
transform = Transform( 7, 0, 0, 0, 0.1, 0, 0, 0, 7, -1.5, -0.944855, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Table"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Table"]
mesh = SubResource( 3 )
material/0 = null

[node name="Dice" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.55625, 1.53673, 0 )

[node name="Die-1" parent="Dice" instance=ExtResource( 5 )]
transform = Transform( -0.0297884, 0.999556, 0, -0.999556, -0.0297884, 0, 0, 0, 1, 0, 1.05737, 0 )

[node name="Die-2" parent="Dice" instance=ExtResource( 5 )]
transform = Transform( 0.48105, -0.521194, -0.704945, 0, 0.804096, -0.5945, 0.876693, 0.285984, 0.38681, 0, 0.892052, -1.83234 )

[node name="Die-3" parent="Dice" instance=ExtResource( 5 )]
transform = Transform( 0.497882, 0.853372, 0.154499, -2.68998e-08, -0.17815, 0.984003, 0.867245, -0.489918, -0.0886975, 0, 0.383462, 1.21631 )

[node name="Die-4" parent="Dice" instance=ExtResource( 5 )]
transform = Transform( 0.608023, 0.289903, 0.739097, -0.355017, -0.733403, 0.579727, 0.710121, -0.614879, -0.343005, 0, 1.50644, 2.66003 )

[node name="PlayerChips" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.770211, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Chip" parent="PlayerChips" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.8377, 0.422113, -2.77298 )

[node name="Chip2" parent="PlayerChips" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.88128, 0.426465, -1.98025 )

[node name="EnemyChips" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.04212, -0.759192, -5.43938 )
__meta__ = {
"_edit_group_": true
}

[node name="Chip" parent="EnemyChips" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.8377, 0.422113, 2.63133 )
team = 1

[node name="Chip2" parent="EnemyChips" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.8377, 0.422113, 3.39579 )
team = 1

[node name="RerollLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Press 'R' to reroll"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnLabel" type="Label" parent="."]
margin_top = 17.0
margin_right = 40.0
margin_bottom = 31.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameCamera" parent="." instance=ExtResource( 6 )]
transform = Transform( 0.128588, -0.379506, -0.91621, 0, 0.92388, -0.382683, 0.991698, 0.0492085, 0.1188, -2, 0, 0.324738 )
distance = 3.0
height = 5.0
fov = 70.0

[node name="DiceSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="TurnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="TokenSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[connection signal="switch_turn" from="GameController" to="." method="_on_GameController_switch_turn"]
